--- a/config/database.yml
+++ b/config/database.yml
@@ -9,3 +9,8 @@ test:
   database: db/test.sqlite3
   pool: 5
   timeout: 5000
+
+production: 
+  adapter: postgresql
+  database: pennyblog
+  encoding: unicode
